# TIDasONE

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  ct.txt  kem_pubkey.txt  test_commsec.py
.github/workflows/: rust.yml
.sqlx/: query-19dd77878c6332eb17c927cb2450821013ae3a4d66fe795b69e1b17af62fa910.json  query-27f1b1bd2753b7d8d8e32f4106a4f49d728d8ae5ff768982f29abc7ff11c0d2a.json  query-ab9bc6040d3f830b665034862e576d3ac3c35197d981442eb6ed474308f3e3a6.json  query-bc0133c7a675a72ae80f3acb98d692a7d024f6846c8dc427ac06749e73b93e99.json  query-df006550bfa505946fa60bae0fb2601d18f6e4c06567eedcbcebbc73ed333c33.json
Documentation/: Description.md
apps/: build.rs
apps/api/: .gitignore  Cargo.toml
apps/api/.sqlx/: query-6e458357a8766926aa620f6e07e68945cd74d4fdd5e54844c9efe2f30857fbc7.json
apps/api/src/: lib.rs  main.rs
apps/api/src/routes/: auth.rs  auth_middleware.rs  commsec.rs  inventory.rs  mod.rs  packages.rs  user.rs
apps/api/tests/: users_test.rs
keys/: commsec_keys.json
scripts/: test_commsec.sh
